# Compiladores_gAlpha

./: .gitignore  README.MD  fatorial.DSKL  fatorial_erro_sintatico.DSKL  primo.DSKL  teste_com_erro.DSKL  teste_com_erro2.DSKL  teste_com_erro_sintatico.DSKL
Lexer/: CMakeLists.txt  DeskLang.g4  compile.sh  main  makefile
Lexer/lib/: DeskLangLexer.cpp  DeskLangLexer.h  DeskLangLexer.interp  DeskLangLexer.tokens
Lexer/src/: MyListener.cpp  MyListener.hpp  SymbolTable.hpp  aa.DSKL  main.cpp
